--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
   </app>
   <script src="src/index.js"></script>
   <script src="src/services/youTube.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular-route.min.js"></script>
   <script src="src/components/app.js"></script>
   <script src="src/components/videoPlayer.js"></script>
   <script src="src/components/search.js"></script>
   <script src="src/components/videoListEntry.js"></script>
   <script src="src/components/videoList.js"></script>
+  
 </body>
 </html>
