--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <script src="src/components/search.js"></script>
   <script src="src/components/videoListEntry.js"></script>
   <script src="src/components/videoList.js"></script>
-  
+  <script src="src/components/chatRoom.js"></script>
+  <script src="src/components/message.js"></script>
 </body>
 </html>
